--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Manrope:wght@200..800&display=swap");
 @import "tailwindcss";
 
-/* global font */
-:root {
-  --font-sans: 'Poppins', system-ui, sans-serif;
+@theme {
+  --font-sans: "Poppins", system-ui, sans-serif;
+  --font-dm: "DM Serif Display", serif;
+  --font-manrope: "Manrope", sans-serif;
 }
 
 body {
